chore(api): Further refactor (including `text` package) to remove deprecations and use modern language features