@@ -56,22 +56,21 @@ public final class LinearComponents {
     if (length == 0) return Component.empty();
     if (length == 1) {
       final ComponentBuilderApplicable ap0 = applicables[0];
-      if (ap0 instanceof ComponentLike) {
-        return ((ComponentLike) ap0).asComponent();
+      if (ap0 instanceof ComponentLike cl) {
+        return cl.asComponent();
       }
       throw nothingComponentLike();
     }
     final TextComponentImpl.BuilderImpl builder = new TextComponentImpl.BuilderImpl();
     Style.Builder style = null;
-    for (int i = 0; i < length; i++) {
-      final ComponentBuilderApplicable applicable = applicables[i];
-      if (applicable instanceof StyleBuilderApplicable) {
+    for (final ComponentBuilderApplicable applicable : applicables) {
+      if (applicable instanceof StyleBuilderApplicable sba) {
         if (style == null) {
           style = Style.style();
         }
-        style.apply((StyleBuilderApplicable) applicable);
-      } else if (style != null && applicable instanceof ComponentLike) {
-        builder.applicableApply(((ComponentLike) applicable).asComponent().style(style));
+        style.apply(sba);
+      } else if (style != null && applicable instanceof ComponentLike cl) {
+        builder.applicableApply(cl.asComponent().style(style));
       } else {
         builder.applicableApply(applicable);
       }
@@ -80,7 +79,7 @@ public final class LinearComponents {
     if (size == 0) {
       throw nothingComponentLike();
     } else if (size == 1 && !builder.hasStyle()) {
-      return builder.children.get(0);
+      return builder.children.getFirst();
     } else {
       return builder.build();
     }
